--- a/admin/config.yml
+++ b/admin/config.yml
@@ -2,6 +2,8 @@ backend:
   name: github
   repo: Axl/site-estheticienne
   branch: main
+  auth_type: implicit
+  app_id: Ov23liv8ojlUgxlVKe1g
   commit_messages:
     create: "Création {{collection}} “{{slug}}” via CMS"
     update: "Mise à jour {{collection}} “{{slug}}” via CMS"
